Administrator can create new event.

--- a/app/assets/javascripts/templates/pages/events.jst.ejs
+++ b/app/assets/javascripts/templates/pages/events.jst.ejs
@@ -1,3 +1,7 @@
+<h2>Events</h2>
+<ul class="actions">
+  <li><a class="create" href="/#events/new">Create Event</a></li>
+</ul>
 <ul class="event_list">
   <% _.each(events, function(event) { %>
     <% if (event.archived) { %>
