Administrator can import hosts/visitors when creating event.

--- a/app/assets/javascripts/templates/pages/new_event.jst.ejs
+++ b/app/assets/javascripts/templates/pages/new_event.jst.ejs
@@ -3,6 +3,12 @@
   <li>
     <label>Name <input class="name" type="text" /></label>
   </li>
+  <li>
+    <label>Hosts <textarea class="hosts" type="text" /></label>
+  </li>
+  <li>
+    <label>Visitors <textarea class="visitors" type="text" /></label>
+  </li>
 </ul>
 <ul class="actions">
   <li><a class="submit" href="#">Create Event</a></li>
